--- a/css/records.css
+++ b/css/records.css
@@ -14,15 +14,16 @@ body {
     min-height: 100vh;
     padding: 4px;
     margin: 0 auto;
-	z-index: 1;
-  font-family: Arial, Helvetica, sans-serif;
-
+  	z-index: 1;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(61, 12, 12);
+    color: white;
 }
 
 header {
 
   text-align: center;
-  border: 3px solid rgb(12, 12, 12);
+  
 }
 
 #container {
@@ -34,8 +35,35 @@ header {
 
 .item {
 
-  border-bottom: 1px solid rgb(99, 98, 98);
-  padding: 5px;
+  border-bottom: 1px solid rgb(68, 67, 67);
+  padding-bottom: 20px;
+  position: relative;
+  margin-bottom: 15px;
+}
+
+.item a {
+
+  position: absolute;
+  bottom: -7px;
+  right: 0;
+  padding: 6px;
+  color: white;
+  background-color: rgb(5, 77, 5);
+  text-decoration: none;
+}
+
+.item a::after {
+
+  content: '>';
+
+}
+
+
+.item a:hover {
+
+  background-color:rgb(8, 129, 8);
+  cursor: pointer;
+
 }
 
 .item h4 {
